spacing issue fixed for pro iphone models

--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ main {
     }
 
     #about h2 {
-        margin-top: 9.2vh;
+        margin-top: 12vh;
     }
 
     .label {
